--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "ai": "^5.0.44",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
