--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@ai-sdk/google": "^2.0.14",
+    "@ai-sdk/google": "^2.0.46",
     "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.1",
     "@imagekit/next": "^2.1.3",
-    "@prisma/client": "^6.16.0",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^6.19.1",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -28,14 +29,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.543.0",
-    "next": "15.5.2",
+    "next": "^16.0.9",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "pg": "^8.16.3",
+    "react": "^19.2.2",
     "react-day-picker": "^9.10.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.2",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "server-only": "^0.0.1",
@@ -47,12 +50,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.26",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "prisma": "^6.16.0",
+    "prisma": "^6.19.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
