--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.543.0",
     "next": "^16.0.9",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "^19.2.2",
