--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@imagekit/next": "^2.1.3",
     "@prisma/adapter-pg": "^7.1.0",
-    "@prisma/client": "^6.19.1",
+    "@prisma/client": "^7.1.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -33,7 +33,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.543.0",
     "next": "^16.0.9",
-    "next-auth": "^4.24.13",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "^19.2.2",
@@ -56,7 +56,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "prisma": "^6.19.1",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
